# gpu_share

./: .gitignore  CLAUDE.md  CLEANUP.md  CMakeLists.txt  COMPARE.md  GRAY.md  PLAN.md  deno_webgpu_plan.md  pull_and_build.bat  scenes.json
deno_renderer/: Cargo.toml  build.rs  package-lock.json  package.json  proto_bundle.js  proto_entry.js  scene.ts  v8_polyfill.js  webgpu_shim.js
deno_renderer/scenes/: 1.ts  2.ts  3.ts  4.ts  5.ts
deno_renderer/src/: main.rs  wgpu_hal_bridge.rs
deno_renderer/webgpu/: Cargo.toml  adapter.rs  device.rs  lib.rs
handle_transport/: handle_transport.h  handle_transport_tcp.cpp  handle_transport_unix.cpp  handle_transport_win32.cpp
presenter/: CMakeLists.txt  compositor.cpp  compositor.h  grpc_server.cpp  grpc_server.h  main.cpp  surface_import.cpp  surface_import.h  vulkan_context.cpp  vulkan_context.h
proto/: CMakeLists.txt  gpu_share.proto
renderer_extension/: CMakeLists.txt  frame_capture.cpp  frame_capture.h  gpu_share.gdextension  register_types.cpp  register_types.h  shared_surface.cpp  shared_surface.h
shared/: input_event.h  shared_handle.h
test_renderer/: CMakeLists.txt  main.cpp
