[workspace]
members = [".", "webgpu"]

[package]
name = "deno_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38", features = ["linked"] }
deno_core = "0.393"
deno_webgpu = { path = "webgpu" }
wgpu-core = { version = "28", features = ["vulkan", "raw-window-handle"] }
wgpu-hal = { version = "28", features = ["vulkan"] }
wgpu-types = "28"
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
] }
