# Forked from denoland/deno ext/webgpu/ at v2.7.7 (deno_webgpu 0.207.0)
# Workspace references replaced with concrete versions.

[package]
name = "deno_webgpu"
version = "0.207.0"
authors = ["the Deno authors"]
edition = "2024"
license = "MIT"
readme = "README.md"
description = "WebGPU implementation for Deno (forked for gpu-share)"

[lib]
path = "lib.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu-core = { version = "28.0.0", features = ["raw-window-handle", "trace", "replay", "serde", "strict_asserts", "wgsl", "gles"] }
wgpu-types = { version = "28.0.0", features = ["serde", "std"] }

deno_core = "0.393"
deno_error = "0.7.1"
serde = { version = "1.0.149", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
raw-window-handle = "0.6.0"
thiserror = "2.0.12"
indexmap = { version = "2", features = ["serde"] }
serde_json = "1.0.85"
deno_unsync = { version = "0.4.4", default-features = false }

# Apple: Metal backend
[target.'cfg(target_vendor = "apple")'.dependencies]
wgpu-core = { version = "28.0.0", features = ["metal"] }

# Windows: DX12 backend
[target.'cfg(windows)'.dependencies]
wgpu-core = { version = "28.0.0", features = ["dx12"] }

# Windows + Unix (not Emscripten): Vulkan backend
[target.'cfg(any(windows, all(unix, not(target_os = "emscripten"))))'.dependencies]
wgpu-core = { version = "28.0.0", features = ["vulkan"] }
